--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,13 +26,18 @@ jobs:
           flutter-version: '3.24.4'
           channel: 'stable'
 
+      - name: Patch for linux build
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y ninja-build libgtk-3-dev
+
       - name: Install Dependencies
         run: flutter pub get
 
       - name: Build APK
         run: flutter build linux --release
 
-      - name: Compress Archives and IPAs
+      - name: Compress Archives
         run: |
           cd build
           tar -czf linux.tar.gz linux
