--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,11 +8,19 @@ on:
 jobs:
   build:
     name: Build & Release
-    runs-on: ubuntu-24.04-arm
+    runs-on: ubuntu-22.04  # Updated to a stable runner for setup-qemu support
 
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set Up Java
         uses: actions/setup-java@v3.12.0
@@ -35,7 +43,14 @@ jobs:
         run: flutter pub get
 
       - name: Build APK
-        run: flutter build linux --release --target-platform=linux-arm64
+        run: |
+          docker run --rm --platform linux/arm64 -v ${{ github.workspace }}:/workspace -w /workspace \
+          ubuntu:22.04 /bin/bash -c "
+          sudo apt-get update -y &&
+          sudo apt-get install -y ninja-build libgtk-3-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev &&
+          flutter pub get &&
+          flutter build linux --release --target-platform=linux-arm64
+          "
 
       - name: Compress Archives
         run: |
@@ -62,7 +77,7 @@ jobs:
             echo "TAG_EXISTS=true" >> $GITHUB_ENV
           else
             echo "TAG_EXISTS=false" >> $GITHUB_ENV
-          fi    
+          fi
 
       - name: Modify Tag
         if: env.TAG_EXISTS == 'true'
