--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,8 +46,8 @@ jobs:
         run: |
           docker run --rm --platform linux/arm64 -v ${{ github.workspace }}:/workspace -w /workspace \
           ubuntu:22.04 /bin/bash -c "
-          sudo apt-get update -y &&
-          sudo apt-get install -y ninja-build libgtk-3-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev &&
+          apt-get update -y &&
+          apt-get install -y ninja-build libgtk-3-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev &&
           flutter pub get &&
           flutter build linux --release --target-platform=linux-arm64
           "
