feat: add new packages and configs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,29 +6,80 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.7.0
 
 dependencies:
   flutter:
     sdk: flutter
 
-  flutter_svg: ^2.0.11
+  flutter_svg: ^2.0.17
   cupertino_icons: ^1.0.8
-  get_it: ^7.2.0
-  get: ^4.6.6
+  get_it: ^8.0.3
+  get: ^4.7.2
   google_fonts: ^6.2.1
   qr_flutter: ^4.0.0
-  jiffy: ^6.3.1
+  jiffy: ^6.3.2
   percent_indicator: ^4.2.4
+  dio: ^5.8.0+1
+  logger: ^2.5.0
+  package_info_plus: ^8.1.0
+  injectable: ^2.5.0
+  flutter_native_splash: ^2.4.5
+  android_id: ^0.4.0
+  device_info_plus: ^11.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  injectable_generator: ^1.5.4
-  build_runner: ^2.4.13
-  json_serializable: ^6.5.1
-  flutter_lints: ^4.0.0
+  injectable_generator: ^2.7.0
+  build_runner: ^2.4.15
+  json_serializable: ^6.9.4
+  flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.3
+
+flutter_native_splash:
+  color: "#232344"
+  image: "assets/launcher/logo.png"
+
+  android_12:
+    color: "#232344"
+    image: "assets/launcher/logo_android_12.png"
+
+flutter_launcher_icons:
+  image_path_android: "assets/launcher/launcher-icon.png"
+  image_path_ios: "assets/launcher/ios_launcher_icon.png"
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  background_color_ios: "#ffffff"
+  web:
+    generate: true
+    image_path: "assets/launcher/launcher-icon.png"
+    background_color: "#ffffff"
+
+fonts:
+  - family: Geist
+    fonts:
+      - asset: fonts/non.geist/Geist-Thin.ttf
+        weight: 100
+      - asset: fonts/non.geist/Geist-ExtraLight.ttf
+        weight: 200
+      - asset: fonts/non.geist/Geist-Light.ttf
+        weight: 200
+      - asset: fonts/non.geist/Geist-Regular.ttf
+        weight: 400
+      - asset: fonts/non.geist/Geist-Medium.ttf
+        weight: 500
+      - asset: fonts/non.geist/Geist-SemiBold.ttf
+        weight: 600
+      - asset: fonts/non.geist/Geist-Bold.ttf
+        weight: 700
+      - asset: fonts/non.geist/Geist-ExtraBold.ttf
+        weight: 800
+      - asset: fonts/non.geist/Geist-Black.ttf
+        weight: 900
+
 
 flutter:
   uses-material-design: true
