--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_native_splash: ^2.4.5
   android_id: ^0.4.0
   device_info_plus: ^11.1.0
+  dart_periphery: ^0.9.15
 
 dev_dependencies:
   flutter_test:
