--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           docker run --rm --platform linux/arm64 -v ${{ github.workspace }}:/workspace -w /workspace \
           ubuntu:22.04 /bin/bash -c "
+          add-apt-repository universe &&
           apt-get update -y &&
           apt-get install -y ninja-build \ 
               libgtk-3-dev \
@@ -49,7 +50,6 @@ jobs:
               cmake \
               git \
               pkg-config \
-              libgtk-3-dev \
               liblzma-dev \
               libstdc++-12-dev \
           && wget https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.29.0-stable.tar.xz
