--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           docker run --rm --platform linux/arm64 -v ${{ github.workspace }}:/workspace -w /workspace \
           ubuntu:22.04 /bin/bash -c "
+          echo "deb http://archive.ubuntu.com/ubuntu focal-updates main" | sudo tee -a /etc/apt/sources.list > /dev/null &&
           apt-get update -y &&
           apt-get install -y ninja-build \ 
               libgtk-3-dev \
