--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
           ubuntu:22.04 /bin/bash -c "
           echo "deb http://archive.ubuntu.com/ubuntu focal-updates main" | sudo tee -a /etc/apt/sources.list > /dev/null &&
           apt-get update -y &&
-          apt-get install -y ninja-build \ 
+          sudo apt-get install -y ninja-build \ 
               libgtk-3-dev \
               libgstreamer1.0-dev \ 
               libgstreamer-plugins-base1.0-dev \
